--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -1,4 +1,4 @@
-name: workflow for Maven using Snyk security scan
+name: workflow for Maven using Snyk security scan antonio test
 on: push
 jobs:
   security:
